@@ -1,3 +1,9 @@
+2000-03-27  Dave Peticolas  <peticola@cs.ucdavis.edu>
+
+	* src/scm/report/budget-report.scm: removed use of transaction
+ 	report function. This was generating a value that was not
+ 	subsequently used.
+
 2000-03-26  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
 	* src/scm/report/transaction-report.scm: i18n the report
